update JS section

--- a/04 - JS.md
+++ b/04 - JS.md
@@ -148,7 +148,7 @@ function hello() {
 <html>
     <head>
         <script>
-            document.querySelector('DOMContentLoaded', function() {
+            document.addEventListener('DOMContentLoaded', function() {
                 document.querySelector('form').onsubmit = function() {
                     const name = document.querySelector('#name').value;
                     alert(`Hello ${name}`);
@@ -171,7 +171,7 @@ function hello() {
 <html>
     <head>
         <script>
-            document.querySelector('DOMContentLoaded', function() {
+            document.addEventListener('DOMContentLoaded', function() {
 
                 document.querySelectorAll('.color-change').forEach(function(button) {
                     button.onclick = function() {
@@ -196,7 +196,7 @@ function hello() {
 <html>
     <head>
         <script>
-            document.querySelector('DOMContentLoaded', () => {
+            document.addEventListener('DOMContentLoaded', () => {
 
                 document.querySelectorAll('.color-change').forEach(button => {
                     button.onclick = () => {
@@ -216,4 +216,197 @@ function hello() {
 </html>
 ```
 
-1:23:00
+```html
+<html>
+    <head>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+
+                document.querySelector('#color-change').onchange = function() {
+                    document.querySelector('#hello').style.color = this.value;
+                };
+            });
+        </script>
+    </head>
+
+    <body>
+        <h1 id="hello">Hello</h1>
+        <select>
+            <option value="black">Black</option>
+            <option value="red">Red</option>
+            <option value="blue">Blue</option>
+            <option value="green">Green</option>
+        </select>
+    </body>
+</html>
+```
+
+```html
+<html>
+    <head>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+
+                document.querySelector('#submit').disabled = true;
+
+                document.querySelector('#task').onkeyup = () => {
+                    if (document.querySelector('#task').value.length > 0){
+                        document.querySelector('#submit').disabled = false;
+                    } 
+
+                    else {
+                        document.querySelector('#submit').disabled = true;
+                    };
+
+                };
+
+                document.querySelector('form').onsubmit = () => {
+                    const li = document.createElement('li');
+                    li.innerHTML = document.querySelector('#task').value;
+
+                    document.querySelector('#tasks').append(li);
+
+                    document.querySelector('#task').value = '';
+                    document.querySelector('#submit').disabled = true;
+
+                    return false;
+                }
+            });
+        </script>
+    </head>
+
+    <body>
+        <h1>Tasks</h1>
+        <ul id="tasks">
+        </ul>
+        <form>
+            <input type="text" id="task" autocomplete="off" autofocus placeholder="New Task">
+            <input type="submit" id="submit">
+        </form>
+    </body>
+</html>
+```
+
+#### Using `setInterval`
+```html
+<html>
+    <head>
+        <script>
+            document.addEventListener('DOMContentLoaded', () => {
+                setInterval(count, 1000);
+                // setInterval get a function and a time in ms
+            });
+
+            let counter = 0;
+
+            function count() {
+                counter ++;
+                document.querySelector('#counter').innerHTML = counter;
+            }
+
+        </script>
+    </head>
+
+    <body>
+        <h1 id="counter">0</h1>
+    </body>
+</html>
+```
+
+### Local Storage
+
+```javascript
+localStorage.getItem(key)
+localStorage.setItem(key, value)
+```
+
+```html
+<html>
+    <head>
+        <script>
+
+            if (!localStorage.getItem('counter')) {
+                localStorage.setItem('counter', 0)
+            }
+
+            document.addEventListener('DOMContentLoaded', () => {
+                document.querySelector('#counter').innerHTML = localStorage.getItem('counter');
+
+                document.querySelector('button').onclick = () => {
+                    let counter = localStorage.getItem('counter');
+                    counter ++;
+
+                    document.querySelector('#counter').innerHTML = counter;
+                    localStorage.setItem('counter', counter);
+
+                }
+            });
+
+            let counter = 0;
+
+            function count() {
+                counter ++;
+                document.querySelector('#counter').innerHTML = counter;
+            }
+
+        </script>
+    </head>
+
+    <body>
+        <h1 id="counter"></h1>
+        <button>Click Here!</button>
+    </body>
+</html>
+```
+
+## APIs
+#### Using `fetch`
+```html
+<html>
+<head>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('form').onsubmit = (event) => {
+                event.preventDefault();
+
+                const currency = document.querySelector('#currency').value.toUpperCase();
+                const apikey = 'API-KEY';
+                const url = `https://api.apilayer.com/exchangerates_data/latest?symbols=${currency}&base=USD`;
+                
+                var myHeaders = new Headers();
+                myHeaders.append("apikey", apikey);
+
+                var requestOptions = {
+                    method: 'GET',
+                    redirect: 'follow',
+                    headers: myHeaders
+                };
+
+                fetch(url, requestOptions)
+                    .then(response => response.json())
+                    .then(data => {
+                        const rate = data.rates[currency];
+                        if (rate !== undefined) {
+                            const result = `1 USD is equal to ${rate.toFixed(3)} ${currency}`;
+                            document.querySelector('#result').innerHTML = result;
+                        } else {
+                            document.querySelector('#result').innerHTML = 'Invalid currency.';
+                        }
+                    })
+                    .catch(error => {
+                        console.log('Error:', error);
+                    });
+            }
+        });
+    </script>
+</head>
+
+<body>
+    <form>
+        <input id="currency" placeholder="Currency">
+        <input type="submit" value="Convert">
+    </form>
+    <div id="result"></div>
+</body>
+</html>
+```
